<resources>
    <string name="app_name">Nike</string>
    <string name="usuario">Usuario</string>
    <string name="contrasena">Contraseña</string>
    <string name="iniciar_sesion">Iniciar Sesion</string>
    <string name="historia">Inspirando el potencial atlético y el estilo desde 1964</string>
    <string name="salir">Salir</string>
    <string name="acerca">Acerca</string>
    <string name="correo">Correo</string>
    <string name="marcar">Marcar</string>
    <string name="contacto">Contacto</string>
    <string name="selena_noel_mendia">Selena Noel Mendia</string>
    <string name="volver">Volver</string>
    <string name="acerca_del_desarrollador">Acerca del Desarrollador</string>
    <string name="inicio">Inicio</string>
    <string name="nike">Nike</string>
</resources>