<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/img_5857"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/idusuario"
        android:layout_width="185dp"
        android:layout_height="40dp"
        android:backgroundTint="#938E8E"
        android:drawableStart="@drawable/baseline_person_24"
        android:drawablePadding="0dp"
        android:ems="10"
        android:foregroundTint="#FFFFFF"
        android:hint="@string/usuario"
        android:inputType="text"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.499" />

    <EditText
        android:id="@+id/idcontraseña"
        android:layout_width="185dp"
        android:layout_height="40dp"
        android:backgroundTint="#FFFCFC"
        android:drawableStart="@drawable/baseline_https_24"
        android:drawablePadding="0dp"
        android:ems="10"
        android:foregroundTint="#FFFFFF"
        android:hint="@string/contrasena"
        android:inputType="text"
        android:password="true"
        android:textAlignment="center"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idusuario"
        app:layout_constraintVertical_bias="0.137" />

    <Button
        android:id="@+id/btnIniciarSesion"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:backgroundTint="#FFFFFF"
        android:text="@string/iniciar_sesion"
        android:textAlignment="center"
        android:textColor="#000000"
        android:textSize="23dp"
        app:iconPadding="20dp"
        app:iconTint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.504"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/idcontraseña"
        app:layout_constraintVertical_bias="0.37" />

</androidx.constraintlayout.widget.ConstraintLayout>